After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 697945 - clutter-win32.h path is wrong
clutter-win32.h path is wrong
Status: RESOLVED FIXED
Product: clutter-gtk
Classification: Platform
Component: GtkClutterActor
unspecified
Other Windows
: Normal normal
: ---
Assigned To: clutter-gtk maintainer(s)
clutter-gtk maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-04-13 11:10 UTC by Kouhei Sutou
Modified: 2014-10-07 13:51 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix clutter-win32.h include line (849 bytes, patch)
2013-04-13 11:10 UTC, Kouhei Sutou
committed Details | Review

Description Kouhei Sutou 2013-04-13 11:10:24 UTC
Created attachment 241442 [details] [review]
Fix clutter-win32.h include line

I noticed that clutter-win32.h include line in clutter-gtk/gtk-clutter-actor.c is wrong. Other files (gtk-clutter-util.c and gtk-clutter-embed.c) are right.

It should be
  "#include <clutter/win32/clutter-win32.h>"
but the current is
  "#include <clutter/clutter-win32.h>"
. "/win32" is missing.
Comment 1 Emmanuele Bassi (:ebassi) 2013-04-13 11:19:16 UTC
Review of attachment 241442 [details] [review]:

looks good.
Comment 2 Kouhei Sutou 2014-10-07 12:30:43 UTC
Could you commit the patch?
Comment 3 Emmanuele Bassi (:ebassi) 2014-10-07 13:05:15 UTC
thanks for the patch, and sorry for taking this long to push it.
Comment 4 Kouhei Sutou 2014-10-07 13:51:41 UTC
Thanks!