actor: fix clutter-win32.h include path

It is installed under "clutter/win32/" directory. Other include paths
were fixed in 9da7dd191dae7d1cc626ea22998145ebc2bb0722 but it was not
fixed.

https://bugzilla.gnome.org/show_bug.cgi?id=697945